--- a/presentation/header.tex
+++ b/presentation/header.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{pifont}
 \usepackage{arev}
-\graphicspath{{../../sems-media/priv/}}
+%\graphicspath{{../../sems-media/priv/}}
 %%%%%%%%%%%% Festlegung der Titelseite %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \author[
@@ -37,8 +37,8 @@ University of Rostock\\
 %\includegraphics[width=10em]{peters.jpg}
 %\end{minipage}
 }
-\title[SED-ML support in JWS Online]{\Large SED-ML support in JWS Online}
-\subtitle{\small Using SED-ML and COMBINE archives to reproduce Simulation Results}
+\title[Storage Solution for Models with Multiple Versions]{\Large Storage Solution for Models with Multiple Versions}
+\subtitle{\small Concept and Prototype Implementation}
 
 
 % ein alternatives Titelbild kann mittels 
