--- a/presentation/outlook.tex
+++ b/presentation/outlook.tex
@@ -127,9 +127,14 @@
 
  
 \begin{frame}{}{\mylogo}
-	{\LARGE That's it!}\\[1.05em]
-	{\Large Want to talk? Drop me a message!}
+	%{\LARGE That's it!}\\[1.05em]
+	%{\Large Want to talk? Drop me a message!}
+	{\LARGE Thanks for your attention!}
 	\\[1.4em]
+	
+	\includegraphics[height=1em]{res/github.pdf}\ 
+	Fork me on GitHub\\
+	\textcolor{colorscheme}{\url{https://github.com/FreakyBytes/bachelor-thesis}}
 	
 	\includegraphics[height=1em]{res/twitter.png}
 	\textcolor{colorscheme}{\tt\  \href{https://twitter.com/FreakyBytes}{@FreakyBytes}}\\
