--- a/presentation/references.tex
+++ b/presentation/references.tex
@@ -1,11 +1,10 @@
 
 \begin{frame}{}{\mylogo}\vspace{-1em}
-References
-\footnotesize
-%\tiny
+\textbf{References}
+%\footnotesize
+\tiny
 %\small
-\begin{itemize}
-	\item ...
-\end{itemize}
+\bibliographystyle{abbrvnat}
+\bibliography{../tex/zotero.bib}
 
 \end{frame}
