--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -957,170 +957,6 @@ Contact: tommy.yu\{at\}auckland.ac.nz},
   file = {IEEE Xplore Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/UZHIXUTQ/Spinellis - 2005 - Version control systems.pdf:application/pdf;IEEE Xplore Abstract Record:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/ZH5X8NB4/1504674.html:text/html}
 }
 
-@patent{zotero-null-197,
-  title = {Version Control System for Geographically Distributed Software Development},
-  abstract = {A data processing system and method for controlling files at a local development site within a geographically distributed multisite software development project includes a storage device, a processor, a mastership enforcer and an exchanger. The storage device stores a local replica including a plurality of files. Each file comprises a plurality of branches, and each branch comprises a plurality of versions of the file. The processor executes instructions, and retrieves and stores versions of the files in the storage device. The mastership enforcer provides the processor with the exclusive capability to modify specific branches by adding new versions of target files as determined by multisite mastership rules. The processor can create new versions of the target files, which are stored in the local replica within the storage device. The exchanger periodically updates the local replica by exporting the new versions of the target files to remote replicas at geographically remote development sites and importing additional new versions of the files from remote replicas. Thus, different branches of files, which are stored in multiple replicas geographically distributed at various development sites, can be modified concurrently and the replicas are updated with each others modifications periodically, without losing modifications or allowing inconsistent modifications among the replicas.},
-  timestamp = {2016-10-24T11:16:35Z},
-  urldate = {2016-10-24},
-  url = {http://www.google.com/patents/US5675802},
-  note = {US-Klassifikation 717/103, 717/121, 707/E17.005, 707/999.203, 707/999.202; Internationale Klassifikation G06F17/30, G06F9/44;  Unternehmensklassifikation Y10S707/99954, G06F17/30575, G06F8/71, Y10S707/99953;  Europ{\"a}ische Klassifikation G06F8/71, G06F17/30S7}
-}
-
-@article{Schmoldt1975,
-  title = {Digitoxin Metabolism by Rat Liver Microsomes},
-  volume = {24},
-  issn = {0006-2952},
-  language = {ENG},
-  timestamp = {2016-10-24T11:18:27Z},
-  number = {17},
-  journal = {Biochemical Pharmacology},
-  author = {Schmoldt, A. and Benthe, H. F. and Haberland, G.},
-  month = sep,
-  year = {1975},
-  keywords = {Animals,Chromatography; Thin Layer,Digitoxigenin,Digitoxin,Hydroxylation,In Vitro Techniques,Male,Microsomes; Liver,NADP,Rats,Time Factors},
-  pages = {1639--1641},
-  pmid = {10}
-}
-
-@article{Makar1975,
-  title = {Formate Assay in Body Fluids: Application in Methanol Poisoning},
-  volume = {13},
-  issn = {0006-2944},
-  shorttitle = {Formate Assay in Body Fluids},
-  language = {ENG},
-  timestamp = {2016-10-24T11:18:31Z},
-  number = {2},
-  journal = {Biochemical Medicine},
-  author = {Makar, A. B. and McMartin, K. E. and Palese, M. and Tephly, T. R.},
-  month = jun,
-  year = {1975},
-  keywords = {Aldehyde Oxidoreductases,Animals,Body Fluids,Carbon Dioxide,Formates,Haplorhini,Humans,Hydrogen-Ion Concentration,kinetics,Methanol,Methods,Pseudomonas},
-  pages = {117--126},
-  pmid = {1}
-}
-
-@article{Makar1975a,
-  title = {Formate Assay in Body Fluids: Application in Methanol Poisoning},
-  volume = {13},
-  issn = {0006-2944},
-  shorttitle = {Formate Assay in Body Fluids},
-  language = {ENG},
-  timestamp = {2016-10-24T11:18:33Z},
-  number = {2},
-  journal = {Biochemical Medicine},
-  author = {Makar, A. B. and McMartin, K. E. and Palese, M. and Tephly, T. R.},
-  month = jun,
-  year = {1975},
-  keywords = {Aldehyde Oxidoreductases,Animals,Body Fluids,Carbon Dioxide,Formates,Haplorhini,Humans,Hydrogen-Ion Concentration,kinetics,Methanol,Methods,Pseudomonas},
-  pages = {117--126},
-  pmid = {1}
-}
-
-@article{Sonnhof1975,
-  title = {Inhibitory Postsynaptic Actions of Taurine, {{GABA}} and Other Amino Acids on Motoneurons of the Isolated Frog Spinal Cord},
-  volume = {100},
-  issn = {0006-8993},
-  abstract = {The actions of glycine, GABA, alpha-alanine, beta-alanine and taurine were studied by intracellular recordings from lumbar motoneurons of the isolated spinal cord of the frog. All amino acids tested produced a reduction in the amplitude of postsynaptic potentials, a blockade of the antidromic action potential and an increase of membrane conductance. Furthermore, membrane polarizations occurred, which were always in the same direction as the IPSP. All these effects indicate a postsynaptic inhibitory action of these amino acids. When the relative strength of different amino acids was compared, taurine had the strongest inhibitory potency, followed by beta-alanine, alpha-alanine, GABA and glycine. Topically applied strychnine and picrotoxin induced different changes of post-synaptic potentials, indicating that distinct inhibitory systems might be influenced by these two convulsants. Interactions with amino acids showed that picrotoxin seletively diminished the postsymaptic actions of GABA, while strychnine reduced the effects of taurine, glycine, alpha- and beta-alanine. But differences in the susceptibility of these amino acid actions to strychnine could be detected: the action of taurine was more sensitively blocked by strychnine compared with glycine, alpha- and beta-alanine. With regard to these results the importance of taurine and GABA as transmitters of postsynaptic inhibition on motoneurons in the spinal cord of the frog is discussed.},
-  language = {ENG},
-  timestamp = {2016-10-24T11:18:35Z},
-  number = {2},
-  journal = {Brain Research},
-  author = {Sonnhof, U. and Grafe, P. and Krumnikl, J. and Linder, M. and Schindler, L.},
-  month = dec,
-  year = {1975},
-  keywords = {Alanine,Amino Acids,Animals,Anura,Depression; Chemical,Drug Interactions,Evoked Potentials,gamma-Aminobutyric Acid,Glycine,Membrane Potentials,Motor Neurons,Neural Inhibition,Neurotransmitter Agents,Picrotoxin,Rana esculenta,Spinal Cord,Spinal Nerve Roots,Stereoisomerism,Strychnine,Synaptic Membranes,Taurine},
-  pages = {327--341},
-  pmid = {128}
-}
-
-@article{zotero-null-208,
-  timestamp = {2016-10-24T11:24:01Z}
-}
-
-@article{Makar1975b,
-  title = {Formate Assay in Body Fluids: Application in Methanol Poisoning},
-  volume = {13},
-  issn = {0006-2944},
-  shorttitle = {Formate Assay in Body Fluids},
-  language = {ENG},
-  timestamp = {2016-10-24T11:24:48Z},
-  number = {2},
-  journal = {Biochemical Medicine},
-  author = {Makar, A. B. and McMartin, K. E. and Palese, M. and Tephly, T. R.},
-  month = jun,
-  year = {1975},
-  keywords = {Aldehyde Oxidoreductases,Animals,Body Fluids,Carbon Dioxide,Formates,Haplorhini,Humans,Hydrogen-Ion Concentration,kinetics,Methanol,Methods,Pseudomonas},
-  pages = {117--126},
-  pmid = {1}
-}
-
-@article{Makar1975c,
-  title = {Formate Assay in Body Fluids: Application in Methanol Poisoning},
-  volume = {13},
-  issn = {0006-2944},
-  shorttitle = {Formate Assay in Body Fluids},
-  language = {ENG},
-  timestamp = {2016-10-24T11:24:52Z},
-  number = {2},
-  journal = {Biochemical Medicine},
-  author = {Makar, A. B. and McMartin, K. E. and Palese, M. and Tephly, T. R.},
-  month = jun,
-  year = {1975},
-  keywords = {Aldehyde Oxidoreductases,Animals,Body Fluids,Carbon Dioxide,Formates,Haplorhini,Humans,Hydrogen-Ion Concentration,kinetics,Methanol,Methods,Pseudomonas},
-  pages = {117--126},
-  pmid = {1}
-}
-
-@article{Schmoldt1975a,
-  title = {Digitoxin Metabolism by Rat Liver Microsomes},
-  volume = {24},
-  issn = {0006-2952},
-  language = {ENG},
-  timestamp = {2016-10-24T11:24:54Z},
-  number = {17},
-  journal = {Biochemical Pharmacology},
-  author = {Schmoldt, A. and Benthe, H. F. and Haberland, G.},
-  month = sep,
-  year = {1975},
-  keywords = {Animals,Chromatography; Thin Layer,Digitoxigenin,Digitoxin,Hydroxylation,In Vitro Techniques,Male,Microsomes; Liver,NADP,Rats,Time Factors},
-  pages = {1639--1641},
-  pmid = {10}
-}
-
-@article{Sonnhof1975a,
-  title = {Inhibitory Postsynaptic Actions of Taurine, {{GABA}} and Other Amino Acids on Motoneurons of the Isolated Frog Spinal Cord},
-  volume = {100},
-  issn = {0006-8993},
-  abstract = {The actions of glycine, GABA, alpha-alanine, beta-alanine and taurine were studied by intracellular recordings from lumbar motoneurons of the isolated spinal cord of the frog. All amino acids tested produced a reduction in the amplitude of postsynaptic potentials, a blockade of the antidromic action potential and an increase of membrane conductance. Furthermore, membrane polarizations occurred, which were always in the same direction as the IPSP. All these effects indicate a postsynaptic inhibitory action of these amino acids. When the relative strength of different amino acids was compared, taurine had the strongest inhibitory potency, followed by beta-alanine, alpha-alanine, GABA and glycine. Topically applied strychnine and picrotoxin induced different changes of post-synaptic potentials, indicating that distinct inhibitory systems might be influenced by these two convulsants. Interactions with amino acids showed that picrotoxin seletively diminished the postsymaptic actions of GABA, while strychnine reduced the effects of taurine, glycine, alpha- and beta-alanine. But differences in the susceptibility of these amino acid actions to strychnine could be detected: the action of taurine was more sensitively blocked by strychnine compared with glycine, alpha- and beta-alanine. With regard to these results the importance of taurine and GABA as transmitters of postsynaptic inhibition on motoneurons in the spinal cord of the frog is discussed.},
-  language = {ENG},
-  timestamp = {2016-10-24T11:24:56Z},
-  number = {2},
-  journal = {Brain Research},
-  author = {Sonnhof, U. and Grafe, P. and Krumnikl, J. and Linder, M. and Schindler, L.},
-  month = dec,
-  year = {1975},
-  keywords = {Alanine,Amino Acids,Animals,Anura,Depression; Chemical,Drug Interactions,Evoked Potentials,gamma-Aminobutyric Acid,Glycine,Membrane Potentials,Motor Neurons,Neural Inhibition,Neurotransmitter Agents,Picrotoxin,Rana esculenta,Spinal Cord,Spinal Nerve Roots,Stereoisomerism,Strychnine,Synaptic Membranes,Taurine},
-  pages = {327--341},
-  pmid = {128}
-}
-
-@article{Makar1975d,
-  title = {Formate Assay in Body Fluids: Application in Methanol Poisoning},
-  volume = {13},
-  issn = {0006-2944},
-  shorttitle = {Formate Assay in Body Fluids},
-  language = {ENG},
-  timestamp = {2016-10-24T11:24:58Z},
-  number = {2},
-  journal = {Biochemical Medicine},
-  author = {Makar, A. B. and McMartin, K. E. and Palese, M. and Tephly, T. R.},
-  month = jun,
-  year = {1975},
-  keywords = {Aldehyde Oxidoreductases,Animals,Body Fluids,Carbon Dioxide,Formates,Haplorhini,Humans,Hydrogen-Ion Concentration,kinetics,Methanol,Methods,Pseudomonas},
-  pages = {117--126},
-  pmid = {1}
-}
-
 @article{Spinellis2005a,
   title = {If Your Version Control System Could Talk},
   timestamp = {2016-10-24T11:32:13Z},
@@ -1224,14 +1060,6 @@ Contact: sysbio-team\{at\}caltech.edu},
   file = {Chacon and Straub - 2014 - Pro Git.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/BMZUX7C2/Chacon and Straub - 2014 - Pro Git.pdf:application/pdf}
 }
 
-@misc{zotero-null-243,
-  title = {New {{Tab}}},
-  timestamp = {2016-11-06T19:07:03Z},
-  urldate = {2016-11-06},
-  url = {about:newtab},
-  file = {New Tab:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/HGG22BHJ/newtab.html:application/xhtml+xml}
-}
-
 @article{Cuellar2003,
   title = {An {{Overview}} of {{CellML}} 1.1, a {{Biological Model Description Language}}},
   volume = {79},
@@ -1250,16 +1078,6 @@ Contact: sysbio-team\{at\}caltech.edu},
   keywords = {Biological model,markup language,mathematical model,XML},
   pages = {740--747},
   file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/WKMBXWM5/Cuellar et al. - 2003 - An Overview of CellML 1.1, a Biological Model Desc.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/7K72M3DE/740.html:text/html}
-}
-
-@misc{zotero-null-249,
-  timestamp = {2016-11-09T13:01:26Z},
-  urldate = {2016-11-09},
-  url = {https://scholar.googleusercontent.com/scholar.bib?q=info:IzqN-uHMMqYJ:scholar.google.com/\&output=citation\&scisig=AAGBfm0AAAAAWCMgbbtlBKPvDhOX6TxLa5nd9WffikrT\&scisf=4\&ct=citation\&cd=-1\&hl=de},
-  annote = {
-@article\{bray1998extensible, title=\{Extensible markup language (XML)\}, author=\{Bray, Tim and Paoli, Jean and Sperberg-McQueen, C Michael and Maler, Eve and Yergeau, Fran\{$\backslash$c\{c\}\}ois\}, journal=\{World Wide Web Consortium Recommendation REC-xml-19980210. http://www. w3. org/TR/1998/REC-xml-19980210\}, volume=\{16\}, pages=\{16\}, year=\{1998\} \}
-},
-  file = {scholar.asc:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/54TT975J/scholar.asc:text/plain}
 }
 
 @article{Bray1998,
@@ -1394,6 +1212,50 @@ number of ontologies which no other reasoner has been able to handle.},
   file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/8C93JRH2/Phillips - 1958 - The Relation Between Unemployment and the Rate of .pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/3MTE4ADW/abstract\;jsessionid=16EB2197548023DE24A82FE2BA94BF0E.html:text/html}
 }
 
+@article{Kitchenham2009,
+  series = {Special Section - Most Cited Articles in 2002 and Regular Research Papers},
+  title = {Systematic Literature Reviews in Software Engineering \textendash{} {{A}} Systematic Literature Review},
+  volume = {51},
+  issn = {0950-5849},
+  doi = {10.1016/j.infsof.2008.09.009},
+  abstract = {Background
+In 2004 the concept of evidence-based software engineering (EBSE) was introduced at the ICSE04 conference.
+Aims
+This study assesses the impact of systematic literature reviews (SLRs) which are the recommended EBSE method for aggregating evidence.
+Method
+We used the standard systematic literature review method employing a manual search of 10 journals and 4 conference proceedings.
+Results
+Of 20 relevant studies, eight addressed research trends rather than technique evaluation. Seven SLRs addressed cost estimation. The quality of SLRs was fair with only three scoring less than 2 out of 4.
+Conclusions
+Currently, the topic areas covered by SLRs are limited. European researchers, particularly those at the Simula Laboratory appear to be the leading exponents of systematic literature reviews. The series of cost estimation SLRs demonstrate the potential value of EBSE for synthesising evidence and making it available to practitioners.},
+  timestamp = {2016-11-20T10:38:18Z},
+  number = {1},
+  urldate = {2016-11-20},
+  url = {http://www.sciencedirect.com/science/article/pii/S0950584908001390},
+  journal = {Information and Software Technology},
+  author = {Kitchenham, Barbara and Pearl Brereton, O. and Budgen, David and Turner, Mark and Bailey, John and Linkman, Stephen},
+  month = jan,
+  year = {2009},
+  keywords = {Cost estimation,Evidence-based software engineering,Systematic literature review,Systematic review quality,Tertiary study},
+  pages = {7--15},
+  file = {Kitchenham et al. - 2009 - Systematic literature reviews in software engineer.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/JGIX5QVW/Kitchenham et al. - 2009 - Systematic literature reviews in software engineer.pdf:application/pdf;ScienceDirect Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/TH8EIIU5/S0950584908001390.html:text/html}
+}
+
+@inproceedings{Meyer2015,
+  title = {Building Digital Archives: {{Design}} Decisions: {{A}} Best Practice Example},
+  shorttitle = {Building Digital Archives},
+  doi = {10.1109/ETTLIS.2015.7048172},
+  abstract = {Building digital library applications is often a search for an applicable and adequate data or document model as well as for software tools which meets the requirements. Especially in digital archives, there are several data and document models to be considered. Unfortunately, there is no one-size-fits-all document model or system. For each application, the requirements and properties of a project have to be analyzed. In many cases, on one hand, a developer mostly together with a domain expert has to carry out time-consuming tests with possible solutions. On the other hand, one of the most important questions is sustainability and long-term archiving. Questions regarding these aspects are raised during the technical implementation, at least. In many academic projects, the maintenance and sustainability aspects leave open questions. Therefore, challenges, problems and solutions regarding document models, software systems, and sustainability are exhaustively analyzed in this paper. This is done in the context of the digital archive project DARL (Digitales Archiv Rostocker Liederbuch, engl. Digital Archive of the Rostock Songbook) conducted at University of Rostock.},
+  timestamp = {2016-11-27T17:52:03Z},
+  booktitle = {2015 4th {{International Symposium}} on {{Emerging Trends}} and {{Technologies}} in {{Libraries}} and {{Information Services}}},
+  author = {Meyer, H. and Bruder, I. and Finger, A. and Heuer, A.},
+  month = jan,
+  year = {2015},
+  keywords = {DARL,Databases,data model,data models,Digital archive,Digital Archive of the Rostock Songbook,digital archive project,Digitales Archiv Rostocker Liederbuch,digital libraries,digital library applications,document model,Educational institutions,information retrieval systems,Interoperability,Libraries,long-term archiving,maintenance aspect,Medival song texts,Metadata,Software,software maintenance,software systems,software tools,standards,Sustainability,sustainability aspect,University of Rostock},
+  pages = {59--64},
+  file = {IEEE Xplore Abstract Record:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/HW8WD4WP/7048172.html:text/html}
+}
+
 @comment{jabref-meta: groupsversion:3;}
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
@@ -1410,7 +1272,8 @@ er2009\;Berners-Lee2001\;Berners-Lee2001a\;Shadbolt2006\;Bechhofer2004
 \;Robinson2013\;Collins-Sussman2004\;Spinellis2005\;Spinellis2005a\;OS
 ullivan2009\;Beard2009\;Hucka2003\;Miller2011\;Chacon2014\;Cuellar2003
 \;Bray1998\;Lassila1998\;Carlisle2003\;DeRose2010\;Drager2014\;Scharm2
-014a\;Shearer2008\;Phillips1958\;;
+014a\;Shearer2008\;Phillips1958\;Meyer2015\;;
+1 ExplicitGroup:winf-slr\;0\;Kitchenham2009\;;
 1 ExplicitGroup:zotero-stuff\;0\;Chemiker\;zotero-null-25\;;
 }
 
