added masymos figure and nice graph picture at the end

--- a/presentation/outlook.tex
+++ b/presentation/outlook.tex
@@ -127,9 +127,9 @@
 
  
 \begin{frame}{}{\mylogo}
-	%{\LARGE That's it!}\\[1.05em]
+	{\LARGE That's it!}\\[1.05em]
 	%{\Large Want to talk? Drop me a message!}
-	{\LARGE Thanks for your attention!}
+	%{\LARGE Thanks for your attention!}
 	\\[1.4em]
 	
 	\includegraphics[height=1em]{res/github.pdf}\ 
