--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -117,8 +117,29 @@
 	\vfill
 \end{frame}
 
+\begin{comment}
+\begin{frame}{Concept}{\neoj}
+	{\Large \neoj}
+	\\[2.5em]
+	\begin{itemize}
+		\item ...
+	\end{itemize}
+\end{frame}
+\end{comment}
+
 \begin{frame}{Concept}{\masymos data structure}
-	\todo{}masymos picture...
+	\centering
+	\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{./figures/masymos-small.png}\\
+	{\small Figure taken from \citealt{Henkel2015}}
+\end{frame}
+
+\begin{frame}{Concept}{System Overview}
+	{\LARGE System Overview}
+	\\[2.5em]
+	\centering
+	\vfill
+	\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{../tex/resources/system-overview-matrix.pdf}
+	\vfill
 \end{frame}
 
 \begin{frame}{Concept}{Database Extension}
@@ -204,7 +225,7 @@
 		\item Provides prioritized thread pool executor, for parallelization 
 		\item Uses \bives library \citep{Scharm2015} to:
 		\begin{itemize}
-			\item Generate diffs of models with \comodi annotations
+			\item Generate diffs of models with \comodi \citep{Scharm2016} annotations
 			\item Parse model files, encoded in \sbml or \cellml
 		\end{itemize}
 		\item Inserts diff and  into \neoj/\masymos
@@ -261,4 +282,16 @@
 	\centering
 	\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{./figures/xkcd-standards.png}\\
 	{\small XKCD -- Standards \url{http://xkcd.com/927/}}
+\end{frame}
+
+\begin{frame}{It's done!}{}
+	\centering
+	\begin{tikzpicture}[>=stealth',trans/.style = {->,densely dashed,lightgray},shift={(0,0)},font=\small\selectfont]
+	\node[anchor=center] (graph) at (center) {
+		\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{./figures/all-color-small.png}
+	};
+	\node[anchor=center] (txt) at (graph.center) {
+		\LARGE Thanks for your attention!
+	};
+	\end{tikzpicture}
 \end{frame}
