--- a/presentation/intro.tex
+++ b/presentation/intro.tex
@@ -1,16 +1,7 @@
 \begin{frame}{}{\mylogo}% Titelseite
 	\titlepage
 	\note{
-	 	My name is Martin Peters
-	 	
-	 	
-	 	research student of Dagmar Waltemath at Dept. for Systems Biology \& Bioinformatics in Rostock
-	 	
-		
-		Opportunity for exchange in Stellenbosch, South Africa with Jacky Snoep for 6 months
-		
-		
-		Development of JWS Online
+	 	My name is Martin Peters.
 	}
 \end{frame}
 
