added slide describing what models are in this scope

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -3,13 +3,24 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- \begin{frame}{Table of contents}
-   %\tableofcontents[pausesections]
-   \tableofcontents
-   \note{bla bla toc}
- \end{frame}
+\begin{frame}{Table of contents}
+	%\tableofcontents[pausesections]
+	\tableofcontents
+	\note{bla bla toc}
+\end{frame}
  
 \newsection{Introduction - Research Gap}
+\begin{frame}{Biological Models}{}
+	{\Large Models in \sysbio}
+	\\[2.5em]
+	\begin{itemize}
+		\item Focus on \sbml \citep{Hucka2003} and \cellml \citep{Cuellar2003}
+		\item Formalized biochemical reaction networks
+		\item Encoded in \xml, opening the world of \xml tools and technologies
+		
+	\end{itemize}
+\end{frame}
+
 \begin{frame}{Why keep multiple versions?}{}
 	{\Large Why keep multiple versions?}
 	\\[2.5em]
