added versions on average to reasoning slide for keeping multiple models

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -25,6 +25,8 @@
 	{\Large Why keep multiple versions?}
 	\\[2.5em]
 	\begin{itemize}
+		\item Even released models change quite often \\
+		$\rightarrow $ 4.307 different versions per model on average
 		\item Resolving dependencies without breaking a simulation
 		\item Provenance Management
 	\end{itemize}
