--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -293,6 +293,26 @@
 	
 \end{frame}
 
+\begin{frame}{Outcome}{Test Run}
+	{\Large Test Run}
+	\\[2.5em]
+	\begin{itemize}
+		\item Imported all models in \emph{BioModels Database} and \emph{PMR2} on 2016-10-14
+		\item $3\,367$ distinct models
+		\item $14\,503$ model versions
+		\item $4.307$ versions per model on average
+		\item $223\,144$ changes\\
+			$128\,847$ inserts, $64\,457$ deletes, $15\,198$ updates, $14\,642$ moves
+		\item $8.5$ GBytes of disc storage consumption for the database
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Outcome}{Test Run Visualization}
+	\centering
+	\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{./figures/all-color-small.png}\\
+	{\footnotesize Visualization of all 14 503 model versions and deltas between them}
+\end{frame}
+
 \begin{frame}{Scope of this Work}{What this work is not about}
 	\centering
 	\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{./figures/xkcd-standards.png}\\
