--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -15,6 +15,7 @@
 \usepackage[square,comma]{natbib}
 % set date format
 \usepackage[style=iso]{datetime2}
+\usepackage{mathtools}
 
 \input{../tex/shortcuts.tex}
 
