some minor adjustments on the presentation

--- a/presentation/content.tex
+++ b/presentation/content.tex
@@ -215,7 +215,7 @@
 	\\[2.5em]
 	\begin{itemize}
 		\item Java tool to crawl \emph{BioModels Database} and \emph{PMR2}
-		\item Downloads and stores all model files
+		\item Downloads and stores all model files into local multi-version repository
 		\item Pushes new versions to \masymos
 	\end{itemize}
 \end{frame}
@@ -248,7 +248,12 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Implementation}{BiVeS delta}
+\begin{frame}{Implementation}{\bives delta}
+	\centering
+	\LARGE \bives Deltas
+\end{frame}
+
+\begin{frame}{Implementation}{\bives delta}
 	\centering
 	\vspace{-2em}
 	\begin{tikzpicture}[>=stealth',trans/.style = {->,densely dashed,lightgray},shift={(0,0)},font=\small\selectfont]
