--- a/presentation/header.tex
+++ b/presentation/header.tex
@@ -9,7 +9,7 @@
 	\textbf{\href{http://www.sbi.uni-rostock.de/team/single/martin-peters/}{Martin Peters}}
 ]
 {
-	\underline{\textsc{\href{http://freakybytes.net}{Martin Peters}}},
+	\underline{\textsc{\href{http://freakybytes.net}{Martin Peters}}}
 }
 
 %\date{\today} % Hier kann das Datum des Vortrages festgelegt werden (fuer Fusszeile etc.)
